gap fix

--- a/arquivos/css/styles.css
+++ b/arquivos/css/styles.css
@@ -640,10 +640,6 @@ video {
   row-gap: 2.5rem;
 }
 
-.gap-y-14 {
-  row-gap: 3.5rem;
-}
-
 .gap-y-16 {
   row-gap: 4rem;
 }
